tests/neg-custom-args/captures/byname.check
-- Error: tests/neg-custom-args/captures/byname.scala:5:21 -------------------------------------------------------------
5 |  def g(x: Int) = if cap2 == cap2 then 1 else x // error
  |                     ^^^^
  |                     Another capture checking run needs to be scheduled because
  |                     reference (cap2 : Cap) is not included in the allowed capture set {} of method f
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/byname.scala:10:6 ----------------------------------------
10 |  h(f2())  // error
   |    ^^^^
   |    Found:    () ?->{cap1} Int ->{cap1} Int
   |    Required: () ?=> Int ->{cap2} Int
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/byname.scala:19:5 ----------------------------------------
19 |  h(g()) // error
   |    ^^^
   |    Found:    () ?->{cap2} I^?
   |    Required: () ?->{cap1} I
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/byname.scala:22:5 ----------------------------------------
22 |  h2(() => g())() // error
   |     ^^^^^^^^^
   |     Found:    () ->{cap2} I^?
   |     Required: () ->{cap1} I
   |
   | longer explanation available when compiling with `-explain`
